Mon Mar 16 18:58:09 2009	Pat Rankin	<rankin@pactechdata.com>

	* main.c [#if HAVE_SIGSEGV_H]: For the #else case (VMS),
	(stackoverflow_context_t): Dummy typedef for use in prototypes;
	(stackoverflow_install_handler): Make macro expand to 0 rather
	than nothing so that (void) cast on invocation of it works.

	* main.c (catchstackoverflow): Don't return 0 from void function.

Wed Feb 25 21:34:14 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y (tokentab): Have only one copy of BEGIN / END.
	(tokcompare): New function.
	(check_special): Sort tokentab for EBCDIC systems.

Sun Feb 15 22:39:30 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* profile.c (pp_delete): Print tree->exec_count to actually get
	the value printed. Thanks to Hermann Peifer <peifer@gmx.eu>
	for reporting the bug.

Thu Feb 12 21:54:34 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y: Change to use EXIT_FAILURE.
	* msg.c [EXIT_FATAL]: New macro.
	* msg.c (r_fatal): Change to use EXIT_FATAL.
	Thanks to Pat Rankin for pointing these out.
	* re.c (reflags2str): Account for RE_SYNTAX_EMACS.
	* awk.h: If not VMS, define HAVE_SIGSEGV_H.
	* main.c: Check HAVE_SIGSEGV_H before including <sigsegv.h>. If not
	there, define dummy macros.
	(catchsegv, catchstackoverflow): Remove unneeded comment. Add return 0
	for compilers that care.

Mon Feb  9 05:24:52 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* awk.h [CONST]: Renamed CONSTANT to avoid conflict with libsigsegv
	on Windows.
	* awkgram.y, field.c, re.c: Update all uses.

Tue Feb  3 22:46:59 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (do_close): Wrap updating of ERRNO in check for not
	do_traditional.

Sat Jan 31 23:14:00 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (format_tree): For '%s', don't count the multibyte
	characters if we are just copying all the characters. Gives
	big speedup. Thanks to  Hirofumi Saito <hi_saito@yk.rim.or.jp>
	for reporting the problem.
